# toy_transaction_engine

./: .gitignore  Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js  transactions.csv
.github/workflows/: docs.yml  run_tests.yml  run_tests_and_generate_docs.yml  rustdoc.yml
implementors/clap/derive/: trait.Args.js  trait.CommandFactory.js  (+2 more)
src/: csv_input.rs  main.rs  transaction_engine.rs  tx_processing.rs
src/toy_transaction_engine/: main.rs.html
src/transaction_engine/: lib.rs.html
src/transaction_engine_util/: csv_input.rs.html  csv_output.rs.html  lib.rs.html
toy_transaction_engine/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html
transaction_engine/: Cargo.toml  all.html  enum.FractionalAmountParseError.html  enum.TransactionChargebackError.html  enum.TransactionDepositError.html  enum.TransactionDisputeError.html  enum.TransactionResolveError.html  enum.TransactionWithdrawError.html  index.html  sidebar-items.js  struct.Account.html  struct.ClientId.html  struct.FractionalAmount.html  struct.TransactionId.html  struct.TransactionProcessor.html  type.Accounts.html
transaction_engine/src/: lib.rs
transaction_engine_util/: Cargo.toml  all.html  index.html  sidebar-items.js
transaction_engine_util/csv_input/: enum.CSVInputParserError.html  enum.Transaction.html  index.html  sidebar-items.js  struct.CSVInputParser.html
transaction_engine_util/csv_output/: index.html  sidebar-items.js  struct.AccountOutputCSVRecord.html
transaction_engine_util/src/: csv_input.rs  csv_output.rs  lib.rs
(+27 files in other folders)
