[package]
name = "toy_transaction_engine"
version = "0.5.1"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "toy_transaction_engine"

[workspace]
members = [
  "transaction_engine",
  "transaction_engine_util",
]

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.8", features = ["derive"] }
transaction_engine = { path = "transaction_engine" }
transaction_engine_util = { path = "transaction_engine_util" }
